[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Fonts/MOOD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Artwork/menubackground.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="StyleBoxTexture" id=10]

[sub_resource type="StyleBoxTexture" id=11]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxTexture" id=12]

[sub_resource type="DynamicFont" id=15]
size = 10
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )

[node name="Node" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="Background"]
margin_left = 256.0
margin_top = 162.0
margin_right = 768.0
margin_bottom = 226.0
theme = SubResource( 2 )
tab_size = 5
text = "Didn't I Root For You"

[node name="VBC1" type="VBoxContainer" parent="Background"]
margin_left = 296.0
margin_top = 248.0
margin_right = 728.0
margin_bottom = 416.0

[node name="Start" type="Button" parent="Background/VBC1"]
margin_right = 432.0
margin_bottom = 62.0
size_flags_vertical = 3
theme = SubResource( 4 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 9 )
text = "Start"
icon_align = 1

[node name="Settings" type="Button" parent="Background/VBC1"]
margin_top = 66.0
margin_right = 432.0
margin_bottom = 122.0
size_flags_vertical = 3
theme = SubResource( 6 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 12 )
text = "Settings"
icon_align = 1

[node name="Quit" type="Button" parent="Background/VBC1"]
margin_top = 126.0
margin_right = 432.0
margin_bottom = 182.0
size_flags_vertical = 3
theme = SubResource( 6 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 12 )
text = "Quit"
icon_align = 1

[node name="Settings" type="VBoxContainer" parent="Background"]
visible = false
margin_left = 320.0
margin_top = 256.0
margin_right = 704.0
margin_bottom = 448.0

[node name="HBC1" type="HBoxContainer" parent="Background/Settings"]
margin_right = 384.0
margin_bottom = 160.0

[node name="VBC2" type="VBoxContainer" parent="Background/Settings/HBC1"]
margin_right = 384.0
margin_bottom = 160.0
size_flags_horizontal = 3

[node name="SFXLabel" type="Label" parent="Background/Settings/HBC1/VBC2"]
margin_right = 384.0
margin_bottom = 28.0
theme = SubResource( 16 )
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="Background/Settings/HBC1/VBC2"]
margin_top = 32.0
margin_right = 384.0
margin_bottom = 48.0
size_flags_vertical = 1
step = 10.0
tick_count = 10

[node name="MusicLabel" type="Label" parent="Background/Settings/HBC1/VBC2"]
margin_top = 52.0
margin_right = 384.0
margin_bottom = 80.0
theme = SubResource( 16 )
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="Background/Settings/HBC1/VBC2"]
margin_top = 84.0
margin_right = 384.0
margin_bottom = 100.0
size_flags_vertical = 1
step = 10.0
tick_count = 10

[node name="Back" type="Button" parent="Background/Settings/HBC1/VBC2"]
margin_top = 104.0
margin_right = 384.0
margin_bottom = 160.0
size_flags_vertical = 3
theme = SubResource( 6 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 12 )
text = "Back"
icon_align = 1

[connection signal="pressed" from="Background/VBC1/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Background/VBC1/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Background/VBC1/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Background/Settings/HBC1/VBC2/Back" to="." method="_on_Back_pressed"]
